# yp-record

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  services.sh
src/: alignment.py  events.py  extractor.py  llm.py  main.py  manager.py  notion.py  pipeline.py  service.py  store.py
src/audio/: channels.py  diarization.py  forced_aligner.py  qwen_asr_stt.py  receiver.py
src/infra/: config.py  events.py  logging.py  models.py
src/knowledge/: alignment.py  extractor.py  llm.py  notion.py
src/recording/: manager.py  pipeline.py  service.py  youtube.py
src/recording/audio/: channels.py  diarization.py  forced_aligner.py  qwen_asr_stt.py  receiver.py
src/recording/store/: __init__.py  alignment.py  audio.py  screenshots.py  session.py  transcript.py
src/routers/: alignment.py  audio_ws.py  notion_export.py  screenshots.py  sessions.py  transcript_ws.py  youtube.py
src/store/: __init__.py  alignment.py  audio.py  base.py  screenshots.py  session.py  transcript.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/.claude-flow/data/: pending-insights.jsonl
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/api/: client.ts
web/src/components/: ActionBar.tsx  AlignmentStatusBanner.tsx  AlignmentView.tsx  AudioPlayer.tsx  LiveTranscriptView.tsx  MainPane.tsx  MeetingNoteView.tsx  RecordPage.tsx  RecordingHeader.tsx  SegmentBubble.tsx  SessionCard.tsx  SessionSidebar.tsx  TabView.tsx  WordTimeline.tsx  YouTubePlayer.tsx
web/src/hooks/: useAudioCapture.ts  useAudioMerger.ts  useScreenshotCapture.ts  (+2 more)
(+2 files in other folders)
