[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yp-record"
version = "1.0.0"
description = "Lightweight recording pipeline: ASR → forced alignment → speaker diarization → Notion"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24",
    "loguru>=0.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "yt-dlp>=2024.0",
]

[project.optional-dependencies]
gpu = [
    "qwen-asr>=0.0.6",
    "pyannote.audio>=3.1.0",
    "transformers>=4.40.0",
    "vllm>=0.19.0",
]

[project.scripts]
yp-record = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
